# wsitk-annot

./: pyproject.toml
src/wsitk_annot/: __init__.py  _serialize.py  annot.py  convert.py
test/: 01.ipynb  annot_01.json  test_01_annot.dbz
test/.ipynb_checkpoints/: 01-checkpoint.ipynb
