[project]
name = "wsitk-annot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "vladpopovici", email = "popovici@bioxlab.org" }
]
requires-python = ">=3.12"
dependencies = [
    "geojson>=3.1.0",
    "shapely>=2.0.6",
    "xmltodict>=0.14.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
