[project]
name = "wsitk-annot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "vladpopovici", email = "popovici@bioxlab.org" }
]
requires-python = ">=3.10"
dependencies = [
    "geojson>=3.0.0",
    "shapely>=2.0.0",
    "xmltodict>=0.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
